Bug 305375 - List of contacts does not respect display style for names
Summary: List of contacts does not respect display style for names
Status: RESOLVED FIXED
Alias: None
Product: libkgapi
Classification: Frameworks and Libraries
Component: contacts (other bugs)
Version First Reported In: 0.4.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-18 08:44 UTC by Matthias Nagel
Modified: 2012-08-20 10:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Nagel 2012-08-18 08:44:18 UTC
I recently switched from locally stored contacts to Google GMail contacts. I use kde-misc/akonadi-google-20120619.

To migrate my locally stored contacts into Google I exported them into a vCard. I prefer the reverse, comma-seperated display style for names, i.e. "last-name, first-name". This style was the style used by my old locally stored contacts and
all vCard entries had the attributes

FN:Doe\, John
N:Doe;John;;;

When I looked at the remotely stored contacts for the very first time through kde-misc/akonadi-google-20120619 in kontact-4.8.3 the style was correctly used.

As soon as I edit a contact the style switches to "first-name last-name". It does not matter, if I edit the contact in kontact or in the Google GMail web interface. The same is true for newly created contacts.

If I set the display style back to reverse order, this option only holds until the next synchronization with Google.


Reproducible: Always

Steps to Reproduce:
1. Create or edit a contact (no matter if in kontact or in Google Web interface)
2. Wait until changes are visible inside of kontact
3. The display style is "first-name last-name"
4. Set the display style to reverse order, i.e. "last-name, first-name"
5. Wait until the next synchronization
Actual Results:  
The option in the setting dialog still shows "reverse order", but the actual listing is "first-name last-name".

Expected Results:  
The list entry should be "last-name, first-name".
Comment 1 Daniel Vrátil 2012-08-20 10:05:24 UTC
Git commit 5dc966382e4cd2ec35babbe3dd2ca4cfa0d0638a by Dan Vrátil.
Committed on 20/08/2012 at 11:30.
Pushed by dvratil into branch 'LibKGAPI/0.4'.

Store gd:fullName as formatted name

Store display format of the name directly in gd:fullName.
Google can apparently deal with it well and KABC can parse
the reply as well.
FIXED-IN: 0.4.2

M  +1    -1    libkgapi/services/contacts.cpp

http://commits.kde.org/akonadi-google/5dc966382e4cd2ec35babbe3dd2ca4cfa0d0638a