Store gd:fullName as formatted name

Store display format of the name directly in gd:fullName.
Google can apparently deal with it well and KABC can parse
the reply as well.

BUG: 305375
FIXED-IN: 0.4.2